--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # https://pub.dev/packages/envied
   # Security, encryptation, obfuscation, and more
   envied: ^0.5.4+1
+  # https://pub.dev/packages/provider
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
