--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   envied: ^0.5.4+1
   # https://pub.dev/packages/provider
   provider: ^6.1.2
+  # https://pub.dev/packages/flutter_barcode_scanner
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
