--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   provider: ^6.1.2
   # https://pub.dev/packages/flutter_barcode_scanner
   flutter_barcode_scanner: ^2.0.0
+  # https://pub.dev/packages/path_provider
+  path_provider: ^2.1.4
+  # https://pub.dev/packages/sqflite
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
